chapters/chapter6/simple-backend-dr-max-retries.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: simple-backend-dr
spec:
  host: simple-backend.istioinaction.svc.cluster.local
  trafficPolicy:
    connectionPool:      
      http:
        maxRetries: 3
        http2MaxRequests: 10
        maxRequestsPerConnection: 10
