chapters/chapter6/simple-backend-ef-retry-budgets.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple-backend-retry-budget
  namespace: istioinaction
spec:
  workloadSelector:
    labels:
      app: simple-web
  configPatches:
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
      cluster:
        portNumber: 80
        service: simple-backend.istioinaction.svc.cluster.local
    patch:
      operation: MERGE
      value:
        circuit_breakers:
          thresholds:
            - retry_budget:
                budget_percent:
                  value: 20.0
                min_retry_concurrency: 5
